fixed logo and menu spacing, need to fix news page still

--- a/style.css
+++ b/style.css
@@ -384,6 +384,7 @@ a:active {
 }
 .main-navigation {
 	position: relative;
+	margin-bottom: 50px;
 }
 .menu-main-menu-container {
 	position: absolute;
@@ -747,7 +748,7 @@ header {
 #slider-btn {
 	position: absolute;
 	z-index: 1000;
-	top: 5%;
+	top: 40px;
 }
 #logo {
 	left: 18.9%;
@@ -826,9 +827,8 @@ p.italics {
   height: 100%;
 }
 
-.item img {
-	width: 100%;
-	background-size: cover;
+.item {
+	height: 500px
 }
 
 /* Image Grid */
@@ -1113,4 +1113,51 @@ article.static {
 }
 .entry-meta a {
 	font-size: 12px;
+	font-size: 1.2rem;
+}
+.blog-post:nth-child(1),
+.blog-post:nth-child(2),
+.blog-post:nth-child(3) {
+	position: relative;
+}
+.blog-post:nth-child(1) .featured-image {
+	top: 0;
+}
+.blog-post:nth-child(1) article {
+	height: 300px;
+}
+.blog-post:nth-child(2),
+.blog-post:nth-child(3) {
+	width: 50%;
+}
+.blog-post:nth-child(2) .featured-image,
+.blog-post:nth-child(3) .featured-image {
+	position: relative;
+	max-height: 266px;
+}
+.blog-post:nth-child(2) .featured-image:after,
+.blog-post:nth-child(3) .featured-image:after  {
+    content:'';
+    position:absolute;
+    width:100%; height:100%;
+    top:0; left:0;
+    background:rgba(0,0,0,0.6);
+}
+.blog-post:nth-child(2) article,
+.blog-post:nth-child(3) article {
+/*	display: none;*/
+}
+.blog-post:nth-child(2) .entry-title,
+.blog-post:nth-child(3) .entry-title {
+	display: block;
+	position: absolute;
+	z-index: 10;
+	top: 0;
+	left: 0;
+}
+.blog-post:nth-child(2) {
+	float: left;
+}
+.blog-post:nth-child(3) {
+	float: right;
 }
